[package]
name = "facblue-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
base64 = "0.22.1"
clap = { version = "4.5.23", features = ["derive"] }
csv = "1.3.1"
flate2 = "1.0.35"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
thiserror = "2.0.4"
